<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chalkboard">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="153dp"
        android:text="@string/gameover"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="70sp"
        app:fontFamily="@font/Chalkduster"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="94dp"
        android:layout_marginLeft="95dp"
        android:layout_marginRight="94dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="44dp"
        android:text="@string/win"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="95dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="95dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="86dp"
        android:text="@string/again"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:background="@drawable/startbtn_background"
        />
</android.support.constraint.ConstraintLayout>