<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chalkboard">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="531dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.graci.myapplication.CustomView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <com.example.graci.myapplication.CustomView
            android:id="@+id/customView"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monsters"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:fontFamily="@font/Chalkduster" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/functionbtn_background"
            android:text="@string/fight"
            android:textColor="?attr/colorBackgroundFloating"
            android:textSize="30sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/functionbtn_background"
            android:text="Items"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            tools:text="@string/items" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>